All pages till home page

--- a/app/src/main/res/drawable/signup_button.xml
+++ b/app/src/main/res/drawable/signup_button.xml
@@ -1,4 +1,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#80FFFFFF"/>  <!-- 50% opacity white background (transparentish) -->
-    <corners android:radius="16dp"/>   <!-- Rounded corners with 16dp radius -->
+    <solid android:color="@color/white"/>
+    <corners android:radius="16dp"/>
+    <size
+        android:width="100dp"
+        android:height="100dp">
+
+    </size>
 </shape>
