--- a/app/src/main/res/layout/activity_sign_up_page.xml
+++ b/app/src/main/res/layout/activity_sign_up_page.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="@drawable/login_gradient">
-
     <TextView
         android:id="@+id/Socially"
         android:layout_width="wrap_content"
@@ -16,13 +15,13 @@
         android:fontFamily="@font/instagram_sans"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp">
+        android:layout_marginTop="30dp">
 
     </TextView>
 
     <ImageView
         android:layout_width="50dp"
-        android:layout_height="75dp"
+        android:layout_height="100dp"
         android:src="@drawable/left_arrow"
         android:layout_toLeftOf="@+id/Socially"
         android:layout_marginRight="30dp"
@@ -54,8 +53,9 @@
         <ImageView
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:src="@drawable/circling"
-            android:layout_gravity="center">
+            android:layout_gravity="center"
+            android:paddingTop="5dp"
+            android:src="@drawable/circling">
 
         </ImageView>
 
@@ -79,6 +79,7 @@
         android:layout_marginLeft="20dp"
         android:textSize="18dp"
         android:id="@+id/Username"
+        android:layout_marginTop="18dp"
         >
 
     </TextView>
@@ -256,14 +257,16 @@
 
     </EditText>
 
+    <com.google.android.material.button.MaterialButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/password_input"
+        android:backgroundTint="@color/white"
+        android:layout_centerInParent="true"
+        app:cornerRadius="6dp"
+        android:text="          Create an Account          "
+        android:textColor="@color/smd_theme"
+        android:layout_marginTop="9dp">
 
-<Button
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Button"
-
-
-
-
-
+    </com.google.android.material.button.MaterialButton>
 </RelativeLayout>
