--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="gray">#607D8B</color>
+    <color name="gray">#B3B3B3</color>
     <color name="smd_theme">#A13D36</color>
 
 </resources>
